--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,9 @@
         "laravel/framework": "^7.0",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.0",
-        "livewire/livewire": "^1.0"
+        "laravel/vapor-cli": "^1.6",
+        "livewire/livewire": "^1.0",
+        "nunomaduro/laravel-mojito": "^0.2.4"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
