--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "laravel/ui": "^2.0",
         "laravel/vapor-cli": "^1.6",
         "livewire/livewire": "^1.0",
-        "nunomaduro/laravel-mojito": "^0.2.4"
+        "nunomaduro/laravel-mojito": "^0.2.4",
+        "spatie/laravel-cookie-consent": "^2.12"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
