--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,8 @@
         "grosv/laravel-git-workflow": "^1.0",
         "mockery/mockery": "^1.3.1",
         "nunomaduro/collision": "^4.1",
-        "phpunit/phpunit": "^8.5"
+        "phpunit/phpunit": "^8.5",
+        "titasgailius/terminal": "^0.2.4"
     },
     "config": {
         "optimize-autoloader": true,
