--- a/package.json
+++ b/package.json
@@ -16,11 +16,15 @@
         "laravel-mix": "^5.0.1",
         "laravel-mix-purgecss": "^4.1",
         "laravel-mix-tailwind": "^0.1.0",
+        "laravel-vapor": "^0.4.0",
         "lodash": "^4.17.13",
         "resolve-url-loader": "^3.1.0",
         "sass": "^1.15.2",
         "sass-loader": "^8.0.0",
         "tailwindcss": "^1.0",
         "vue-template-compiler": "^2.6.11"
+    },
+    "dependencies": {
+        "@tailwindcss/ui": "^0.1.3"
     }
 }
