--- a/composer.json
+++ b/composer.json
@@ -25,11 +25,13 @@
     "require-dev": {
         "facade/ignition": "^2.0",
         "grosv/laravel-git-workflow": "^1.0",
+        "grosv/stubby": "dev-master",
         "mockery/mockery": "^1.3.1",
         "nunomaduro/collision": "^4.1",
         "nunomaduro/laravel-mojito": "^0.2.4",
         "phpunit/phpunit": "^8.5",
-        "titasgailius/terminal": "^0.2.4"
+        "timacdonald/log-fake": "^1.6",
+        "ext-mysqli": "*"
     },
     "config": {
         "optimize-autoloader": true,
@@ -55,6 +57,12 @@
             "Tests\\": "tests/"
         }
     },
+    "repositories": [
+        {
+            "type": "git",
+            "url": "https://github.com/grosv/stubby"
+        }
+    ],
     "minimum-stability": "dev",
     "prefer-stable": true,
     "scripts": {
