--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
     },
     "require-dev": {
         "facade/ignition": "^2.0",
-        "grosv/laravel-git-workflow": "^1.0",
+        "grosv/laravel-git-workflow": "*",
         "grosv/stubby": "dev-master",
         "mockery/mockery": "^1.3.1",
         "nunomaduro/collision": "^4.1",
