--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
-    "name": "laravel/laravel",
+    "name": "grosv/laravel-boilerplate",
     "type": "project",
-    "description": "The Laravel Framework.",
+    "description": "An opinionated boilerplate for supercharged Laravel development",
     "keywords": [
         "framework",
         "laravel"
@@ -9,24 +9,21 @@
     "license": "MIT",
     "require": {
         "php": "^7.4",
+        "facade/ignition": "^2.0",
         "fideloper/proxy": "^4.2",
         "friendsofphp/php-cs-fixer": "^2.16",
         "fruitcake/laravel-cors": "^1.0",
         "fzaninotto/faker": "^1.9.1",
-        "grosv/eloquent-sheets": "1.2",
-        "grosv/laravel-passwordless-login": "^1.2",
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "^7.0",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.0",
         "laravel/vapor-cli": "^1.6",
         "livewire/livewire": "^1.0",
-        "spatie/laravel-cookie-consent": "^2.12",
         "wikimedia/composer-merge-plugin": "^1.4"
     },
     "require-dev": {
         "ext-mysqli": "*",
-        "facade/ignition": "^2.0",
         "grosv/laravel-git-workflow": "dev-master",
         "grosv/stubby": "dev-master",
         "mockery/mockery": "^1.3.1",
